# ShelXFile

./: .gitignore  AGENTS.md  LICENSE  README.md  __init__.py  cards.py  dsrmath.py  misc.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  shelx.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish-to-test-pypi.yml  python-dist.yml  python-package.yml  pythonapp.yml  unit-tests.yml
display/: pack_grow.py
draw/: draw_molecule.py
match/: match.py
refine/: __init__.py  shx_refine.py
rmsd/: __init__.py  calculate_rmsd.py  fit_molecule.py  p21c.res
scripts/: generate_grown.py  make_distribution.bat  make_distribution.sh  upload_to_pypi.bat  upload_to_pypi.sh  upload_to_test-pypi.sh
shelxfile/: __init__.py  atoms.py  cards.py  dsrmath.py  elements.py  grow_pack.py  misc.py  sdm.py  shelx.py  version.py
shelxfile/atoms/: atom.py  atoms.py  pairs.py
shelxfile/atoms/atomic_weights/: LICENSE  README.md  atomicWeightsDecimal.py
shelxfile/cif/: cif_template.tmpl  cif_write.py
shelxfile/draw/: draw_molecule.py
shelxfile/fit/: quatfit.py
shelxfile/misc/: dsrmath.py  elements.py  misc.py
shelxfile/refine/: refine.py
shelxfile/shelx/: cards.py  sdm.py  sdm_rust.py  shelx.py
shelxfile/tests/: test_atoms.py  test_cards.py  test_dsrmath.py  test_elements.py  test_parse.py  test_refine.py  test_sdm.py  test_shelx.py
shelxfile/tests/resources/: I-43d.res  test-sdm1.res
shelxfile/tests/resources/model_finished/: p21c.hkl  p21c.res
src/: __init__.py
src/sdm_cpp/: sdm_cpp.cpp
src/shelxfile/: atoms.py  cards.py  dsrmath.py  misc.py  sdm.py  shelx.py
src/shelxfile/draw/: draw_molecule.py
src/shelxfile/fit/: LICENSE.txt  quatfit.py
src/shelxfile/refine/: refine.py
src/tests/: test_atoms.py  test_cards.py  test_dsrmath.py  test_elements.py  test_misc.py  test_quatfit.py  test_shelx.py
src/tests/resources/: I-43d.cif
tests/: p-31c.res  p21c.res  runtests.py  test_atoms.py  test_cards.py  test_conntable.py  test_coverage_improvements.py  test_dsrmath.py  test_dsrmath_ortho.py  test_misc.py  test_parse.py  test_quatfit.py  test_refine.py  test_restraints.py  test_sdm.py  test_shelx.py  test_to_cif.py
tests/complete_run/: p21c.res  test-orig.ins
tests/resources/: 014EP-4_a_shelxl.res  2240189-written.res  2240189.hkl  2240189.res  2240189_EXPORTED.res  include_some.dfx  jkd77.res  p-31c.res  p21c.res  p21c_minimal.res  test-sdm1.res  test_bedelone.res  unclosed_resi.res  water.res  water_EXPORTED.res
tests/resources/complete_run/: test-orig.ins
tests/resources/model_finished/: p21c.res
tests/resources/restraint_tests/: class_and_number_on_restr_and_atoms_but_wrong.res  class_and_numbers.res  class_but_missing_atoms.res  class_with_empty_residues.res  no_class_or_number.res  number_but_missing_atoms.res  number_on_restr_and_atoms.res  number_on_restr_and_atoms_but_wrong.res  only_number_0_on_atoms.res  wildcard_on_atom.res
