[build-system]
# setuptools is used instead of hatchling to support the optional sdm_cpp
# pybind11 C++ extension.  pybind11 and wheel are build-time only.
requires = ["setuptools>=68", "pybind11>=2.13", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shelxfile"
dynamic = ["version"]
authors = [
    { name = "Daniel Kratzert", email = "dkratzert@gmx.de" },
]
description = "A parser for SHELXL results files"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy>=1.21"]

[project.optional-dependencies]
# Build-time only: pybind11 for the C++ SDM acceleration
cpp = ["pybind11>=2.13"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ty",
]

[project.urls]
"Homepage" = "https://dkratzert.de/shelxfile.html"
"Bug Tracker" = "https://github.com/dkratzert/ShelXFile/issues"

[tool.setuptools.dynamic]
version = {attr = "shelxfile.version.VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
shelxfile = ["**/*.py"]

[tool.cibuildwheel]
# Build wheels for Python 3.11–3.14; skip 32-bit targets
skip = ["*-win32", "*-manylinux_i686"]
build = ["cp311-*", "cp312-*", "cp313-*", "cp314-*"]
# Tests are run by the separate `tests` job; skip per-wheel testing here
test-skip = "*"

[tool.cibuildwheel.macos]
# universal2 covers both arm64 and x86_64 on a single macOS runner
archs = ["universal2"]

