[metadata]
name = shelxfile
version = 8
author = Daniel Kratzert
author_email = dkratzert@gmx.de
license = Beerware License
description = A parser for SHELXL results files.
url = https://github.com/dkratzert/ShelXFile
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Chemistry
    Environment :: Console
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
include_package_data = True
packages = find:

[options.packages.find]
include = shelxfile
exclude =
    scripts

[options.data_files]
data = tests/resources/*.*
       tests/resources/complete_run/*.*
       tests/resources/model_finished/*.*